Create quiz with firebase

--- a/src/components/Navigation/Drawer/Drawer.module.css
+++ b/src/components/Navigation/Drawer/Drawer.module.css
@@ -7,8 +7,9 @@
     max-width: 300px;
     box-sizing: border-box;
     padding-top: 25px;
-    background: #594ab1;
-    box-shadow: 1px 0 2px 1px darkslateblue;
+    #background: #252e3a;
+    background: linear-gradient(0deg, #3a4858 20%, #252e3a 60%);
+    box-shadow: 0 0 2px 1px #252e3a;
     z-index: 90;
     transform: translateX(0px);
     transition: transform .22s ease-in;
@@ -25,21 +26,19 @@
 }
 
 .Drawer ul li {
-    margin-bottom: 15px;
-    padding: 10px 0 10px 0;
     text-align: center;
 }
 
 .Drawer ul li a {
-    color: #363f54;
-    font-size: 20px;
+    display: block;
+    color: white;
+    font-size: 1.2rem;
     text-decoration: none;
-    background-color: white;
+    background: #2b3644;
     padding: 10px 10px 10px 10px;
-    position: relative;
-    transition: opacity .3s;
+    transition: all .3s;
 }
 
-.Drawer ul li a:hover, .active {
-    opacity: .5;
+.Drawer ul li a:hover, .Drawer ul li a.active {
+    background-color: #3c4b5c;
 }
