--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -5,9 +5,9 @@
     margin: 10px;
     background-color: #7262dd;
     transition-property: background-color, box-shadow;
-    transition-duration: 0.3s, 0.2s;
+    transition-duration: 0.3s, 0.15s;
     border: 0;
-    box-shadow: 1px 1px 2px 2px darkslateblue;
+    box-shadow: 2px 2px 2px 2px rgba(0,0,0, .4);
 }
 
 .Button:hover {
@@ -17,7 +17,7 @@
 
 .Button:active {
     background-color: #645dc9;
-    box-shadow: 0px 0px 1px 1px darkslateblue;
+    box-shadow: 0 0 1px 1px rgba(0,0,0, .4);
 }
 
 .Button:focus {
