--- a/src/containers/Auth/Auth.module.scss
+++ b/src/containers/Auth/Auth.module.scss
@@ -1,3 +1,5 @@
+@import '../../style/media';
+
 .Auth {
     display: flex;
     flex-direction: column;
@@ -19,4 +21,16 @@
     padding: 20px 40px 20px 40px;
     box-shadow: 1px 2px 4px 3px rgba(0,0,0, .35);
     background-color: rgba(0,0,0, .15);
+    @include mq-to-xs {
+        padding: 0;
+        box-shadow: none;
+        background-color: rgba(0,0,0,0);
+    }
+
+    div {
+        @include mq-to-xs {
+            display: flex;
+            flex-direction: column;
+        }
+    }
 }
