--- a/src/containers/QuizCreator/QuizCreator.module.scss
+++ b/src/containers/QuizCreator/QuizCreator.module.scss
@@ -1,3 +1,4 @@
+@import '../../style/media';
 .QuizCreator {
     display: flex;
     flex-direction: column;
@@ -24,6 +25,17 @@ hr {
     padding: 20px 40px 20px 40px;
     box-shadow: 1px 2px 4px 3px rgba(0,0,0, .35);
     background-color: rgba(0,0,0,0.2);
+    @include mq-to-xs {
+        padding: 0;
+        background-color: rgba(0,0,0,0);
+        box-shadow: 1px 2px 4px 3px rgba(0,0,0, 0);
+    }
+    div {
+        @include mq-to-xs {
+            display: flex;
+            flex-direction: column;
+        }
+    }
 }
 
 .QuizCreator div p {
